<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >

  <ImageView
      android:id="@+id/img"
      android:layout_width="220dp"
      android:layout_height="220dp"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="50dp"
      android:src="@drawable/login"/>
  <EditText
      android:id="@+id/etPhone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_phone_number"
      android:layout_below="@+id/img"
      android:layout_marginTop="40dp"
      android:inputType="phone"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      />
  <EditText
      android:id="@+id/etPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:layout_below="@+id/etPhone"
      android:layout_marginTop="20dp"
      android:inputType="textPassword"
      android:layout_marginLeft="50dp"
      android:layout_marginRight="50dp"
      />
  <Button
      android:id="@+id/LogInbtn"
      android:layout_width="200dp"
      android:layout_height="40dp"
      android:layout_centerHorizontal="true"
      android:text="@string/log_in"
      android:textStyle="bold"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:background="#DA5812"
      android:layout_below="@+id/etPassword"
      android:layout_marginTop="50dp"
      android:layout_marginRight="60dp"
      android:layout_marginLeft="60dp"
      />
  <TextView
    android:id="@+id/tvForget"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/forget_password"
      android:layout_below="@id/LogInbtn"
      android:textSize="14sp"
     android:layout_marginLeft="125dp"
      android:layout_marginRight="80dp"
      android:layout_marginTop="30dp"
      android:textStyle="italic"
      />
  <TextView
      android:id="@+id/tvRegister"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/do_not_have_account_register_sign_up"
      android:layout_below="@id/tvForget"
      android:textSize="14sp"
   android:layout_marginLeft="65dp"
      android:textStyle="italic"
      android:layout_marginTop="100dp"
      />
</RelativeLayout>